- gave "impersonate modal-body" a fixed height - added style "overflow-y" to "impersonate modal-body" to make it scrollable

--- a/app/workgroup/css/workgroup.css
+++ b/app/workgroup/css/workgroup.css
@@ -197,6 +197,8 @@ table th {
 .impersonate-modal .modal-body {
 	padding-left: 200px;
 	padding-right: 200px;
+	height: 450px;
+	overflow-y: auto;
 }
 
 .impersonate-modal .modal-body i {
